[css-grid] Consider scrollbars in PopulateGridPositionsForDirection()

We never care about scrollbars
in LayoutGrid::PopulateGridPositionsForDirection(),
that's fine if the scrollbars are at the end
(e.g. on the right in horizontal writing mode and LTR direction)
but it causes problems when they're at the beginning
(e.g. on the left in horizontal writing mode and RTL direction).

The patch modifies the method so it takes into account scrollbar size
in order to compute the position of the columns/rows
depending on the direction and the writing mode.

BUG=904438
TEST=external/wpt/css/css-grid/grid-model/grid-container-scrollbar-001.html
TEST=external/wpt/css/css-grid/grid-model/grid-container-scrollbar-vertical-lr-001.html
TEST=external/wpt/css/css-grid/grid-model/grid-container-scrollbar-vertical-rl-001.html

Change-Id: I9c8307638647e449f6975cacf99f89e29d4fa655
Reviewed-on: https://chromium-review.googlesource.com/c/1334370
Reviewed-by: Javier Fernandez <jfernandez@igalia.com>
Reviewed-by: Sergio Villar <svillar@igalia.com>
Commit-Queue: Manuel Rego <rego@igalia.com>
Cr-Commit-Position: refs/heads/master@{#608154}
Former-commit-id: edf3fb623b35778a57380a0006124612b3e2bec5